# dz-acos-4-mod

./: CMakeLists.txt  README.md  task1_swap.c
dz1/: CMakeLists.txt  Makefile  README.md  task2_reverse_array.c  task3_transpose_matrix.c  task4_reverse_list.c
dz2/: CMakeLists.txt  README.md  middle_line.c  print_lines.c
dz3/: CMakeLists.txt  Makefile  README.md  bill.c  fred.c  interpose_link.c  interpose_preload.c  john.c  lib.h  main.c  sam.c
dz4/: CMakeLists.txt  README.md  regex_replace.c
dz5/: CMakeLists.txt  README.md  executer.c
dz6/: README.md  c8  sumsum.sh
dz7/: CMakeLists.txt  README.md  thread_sum.c
